--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html data-wf-page="5ecc6545f771b649212b4f8c" data-wf-site="5ecc65453dd22186231bd5b1">
 <head>
   <meta charset="utf-8">
   <title>Code 2 Parsons DT Final</title>
@@ -35,26 +34,26 @@
   </div>
   <div class="section">
     <div id="works-grid" class="w-layout-grid works-grid">
-      <div id="w-node-8f65c72d8fa5-212b4f8c"><a href="https://fossil-roasted-coil.glitch.me/" target="_blank" class="work-image cc-work-1 w-inline-block"></a>
-        <div class="work-description"><a href="https://fossil-roasted-coil.glitch.me/" target="_blank" class="project-name-link">Build and Destroy <br></a>
-          <a href="https://www.linkedin.com/in/jiyoon-moon-594929197/" target="_blank" class="creator-link w-inline-block">
+      <div id="w-node-8f65c72d8fa5-212b4f8c"><a href="https://build-destroy.glitch.me/" target="_blank" class="work-image cc-work-1 w-inline-block"></a>
+        <div class="work-description"><a href="https://build-destroy.glitch.me/" target="_blank" class="project-name-link">Build and Destroy <br></a>
+          <a href="https://jiyoonmoon.myportfolio.com/" target="_blank" class="creator-link w-inline-block">
             <div class="paragraph-light">By Jiyoon Moon</div>
           </a>
           <div class="paragraph-light">A web app where the user can write about a minor inconvenience that has plagued their lives, and destroy the text through clapping. The program asks the user to input a problem and then uses the p5 sound library to reduce the “health” of the text until it has gone away. I find it a satisfying feeling to let out annoyance and anger through the destruction of an object, and this program is intended to be a fun and harmless illustration of that.<br></div>
         </div>
       </div>
       <div id="w-node-31415b2570ba-212b4f8c">
-        <a href="https://editor.p5js.org/ElenaPeng/present/4PXWmeeWU" target="_blank" class="work-image cc-work-5 w-inline-block">
+        <a href="https://weathering-with-mars.glitch.me" target="_blank" class="work-image cc-work-5 w-inline-block">
           <div data-poster-url="videos/IMG_0837-poster-00001.jpg" data-video-urls="videos/IMG_0837-transcode.mp4,videos/IMG_0837-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/IMG_0837-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover"><source src="videos/IMG_0837-transcode.mp4" data-wf-ignore="true"><source src="videos/IMG_0837-transcode.webm" data-wf-ignore="true"></video></div>
         </a>
-        <div class="work-description"><a href="https://editor.p5js.org/ElenaPeng/present/4PXWmeeWU" target="_blank" class="project-name-link">Weathering with Mars<br></a>
+        <div class="work-description"><a href="https://weathering-with-mars.glitch.me" target="_blank" class="project-name-link">Weathering with Mars<br></a>
           <a href="https://portfolio2020-18bd30.webflow.io/" target="_blank" class="creator-link w-inline-block">
-            <div class="paragraph-light">By Elena Page</div>
+            <div class="paragraph-light">By Elena Peng</div>
           </a>
           <div class="paragraph-light">A voice-activated Mars weather assistance, using the P5speech.js library and the information from NASA Insight API. With a simplistic yet animated illustrations, the bot will travel with you to Mars and chat with you about the temperature, time, wind-speed and more information about Mars. This project mainly targets children and younger teenagers, being envisioned in settings like museum interactive displays or educational websites.</div>
         </div>
       </div>
-      <div id="w-node-8f65c72d8fad-212b4f8c"><a href="https://paint-with-sound.glitch.me/" target="_blank" class="work-image cc-work-2 w-inline-block"></a>
+      <div id="w-node-8f65c72d8fad-212b4f8c"><a href="https://paint-with-sound.glitch.me/" target="_blank" class="work-image cc-work-2 w-inline-block"><img src="images/Screen-Shot-2020-05-25-at-8.54.50-PM.png" srcset="images/Screen-Shot-2020-05-25-at-8.54.50-PM-p-500.png 500w, images/Screen-Shot-2020-05-25-at-8.54.50-PM-p-800.png 800w, images/Screen-Shot-2020-05-25-at-8.54.50-PM.png 902w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 96vw, (max-width: 991px) 94vw, 99vw" alt=""></a>
         <div class="work-description"><a href="https://paint-with-sound.glitch.me/" class="project-name-link">Paint With Sound</a>
           <a href="http://kenchendesigns.com" target="_blank" class="creator-link w-inline-block">
             <div class="paragraph-light">By Ken Chen</div>
@@ -62,8 +61,8 @@
           <div class="paragraph-light">A program that visualizes sound into rings and circles and paints them on a revolving canvas to generate a unique artwork to that sound. Audience can find a different way to visualize the progression of a piece of music or sound than on linear sheet music.</div>
         </div>
       </div>
-      <div id="w-node-8f65c72d8fb4-212b4f8c"><a href="https://disko-app.glitch.me/" target="_blank" class="work-image cc-work-3 w-inline-block"></a>
-        <div class="work-description"><a href="https://disko-app.glitch.me/" target="_blank" class="project-name-link">Disko App</a>
+      <div id="w-node-8f65c72d8fb4-212b4f8c"><a href="https://disko-v3.glitch.me/" target="_blank" class="work-image cc-work-3 w-inline-block"></a>
+        <div class="work-description"><a href="https://disko-v3.glitch.me/" target="_blank" class="project-name-link">Disko App</a>
           <a href="https://www.isaacsante.com" target="_blank" class="creator-link w-inline-block">
             <div class="paragraph-light">By Isaac Sante </div>
           </a>
